update code tiki

--- a/tiki/index.html
+++ b/tiki/index.html
@@ -6,34 +6,203 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-    
+
     <title>tiki.vn</title>
 </head>
 
 <body>
     <header>
         <div class="container-header">
-            <div class="logo"><img src="image/logo-tiki.png" alt=""></div>
-            <div class="formSearch">
-                <input type="text" placeholder="Tìm sản phẩn, danh mục hay thương hiệu bạn mong muốn ...">
-                <button  class="btn"><i class="fa-solid fa-magnifying-glass"></i> Tìm kiếm</button>
+            <div class="grid wide">
+                <div class="row">
+                    <div class="logo col l-2">
+                        <img src="image/logo-tiki.png" alt="">
+                    </div>
+                    <div class="formSearch col l-7">
+                        <input type="text" placeholder="Tìm sản phẩm, danh mục hay thương hiệu bạn mong muốn ...">
+                        <button class="btn"><i class="fa-solid fa-magnifying-glass"></i> Tìm kiếm</button>
+                    </div>
+                    <div class="acount_user col l-2 ">
+                        <i class="fa-solid fa-user"></i>
+                        <div class="info_user">
+                            <span>đăng nhập / đăng ký</span>
+                            <span class="acount_lable">
+                                <span>tài khoản</span>
+                                <i class="fa-solid fa-caret-down"></i>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="cart_user col l-1">
+                        <div class="cart_icon">
+                            <div class="amount_cart">0</div>
+                            <i class="fa-solid fa-shopping-cart"></i>
+                        </div>
+                        <span>Giỏ hàng</span>
+                    </div>
+                </div>
             </div>
-            <div class="acount_user">
-                <i class="fa-solid fa-user"></i>
-                <div class="info_user">
-                    <span>đăng nhập/đăng ký</span>
-                    <span class="acount_lable">
-                        <span>tài khoản</span>
-                        <i class="fa-solid fa-caret-down"></i>
-                    </span>
+        </div>
+        <div class="container_bottom_header ">
+            <div class="grid wide">
+                <div class="row">
+                    <div class="logo col l-2">
+                        <img src="image/logo-freeship.png" alt="">
+                    </div>
+                    <ul class="listitem_menu_header col l-7">
+                        <li class="item_menu_header">trái cây</li>
+                        <li class="item_menu_header">thịt,trứng</li>
+                        <li class="item_menu_header">rau củ quả</li>
+                        <li class="item_menu_header">sữa,bơ,phô mai</li>
+                        <li class="item_menu_header">hải sản</li>
+                        <li class="item_menu_header">gạo,mì ăn liền</li>
+                        <li class="item_menu_header">đồ uống,bia rượu</li>
+                        <li class="item_menu_header">bánh kẹo</li>
+                    </ul>
+                    <div class="sales_introduction col l-3">
+                        <div class="sales_introduction_box">
+                            <div class="icon"><i class="fa-solid fa-store"></i></div>
+                            <div class="content">Bán hàng cùng Tiki</div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
         </div>
     </header>
+    <div class="navigation">
+        <div class="grid wide">
+            <div class="row">
+                <div class="col l-12 m-12 c-12">
+                    <div class="content">
+                        <span class="icon-arrow-left">
+                            <i class="fa-solid fa-angle-left arrow-left"></i>
+                        </span>
+                        <span class="icon-arrow-right">
+                            <i class="fa-solid fa-angle-right arrow-right"></i>
+                        </span>
+
+                        <div class="nav">
+                            <div class="slider-bar">
+                                <span class="products">
+                                    <a href="#" class="list">
+                                        <div class="product">Thịt, rau củ</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Bách hóa</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Nhà cửa</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Thiết bị số</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Điện thoại</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Mẹ & bé</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Làm đẹp</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Gia dụng</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Thời trang nữ</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Thời trang nam</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Giày nữ</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Túi nữ</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Giày nam</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Túi nam</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Balo & vali</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Phụ kiện</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Đồng hồ</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Laptop</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Quốc tế</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Voucher</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Xe</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Sách</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Điện tử</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Thể thao</div>
+                                    </a>
+                                    <a href="#" class="list">
+                                        <div class="product">Máy ảnh</div>
+                                    </a>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!---------------section slide home start -->
+    <section class="slide_home">
+        <div class="grid wide">
+            <div class="row no-gutters">
+                <div class="col l-8">
+                    <div class="swiper container-slide_left">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide slide_item"><img src="image/banner-left-1.png" alt=""></div>
+                            <div class="swiper-slide slide_item"><img src="image/banner-left-2.png" alt=""></div>
+                            <div class="swiper-slide slide_item"><img src="image/banner-left-3.png" alt=""></div>
+                            <div class="swiper-slide slide_item"><img src="image/booksale.png" alt=""></div>
+                            <div class="swiper-slide slide_item"><img src="image/ip13.png" alt=""></div>
+                            <div class="swiper-slide slide_item"><img src="image/sale-bn.png" alt=""></div>
+                            <div class="swiper-slide slide_item"><img src="image/sale-motsach.png" alt=""></div>
+                            <div class="swiper-slide slide_item"><img src="image/banner-left-1.png" alt=""></div>
+                        </div>
+                        <div class="swiper-button-next"></div>
+                        <div class="swiper-button-prev"></div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+                <div class="container-banner_right col l-4">
+                    <div class="banner-item">
+                        <img src="image/banner-right.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <!---------------------- js file link------------------>
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
 
 </html>
