--- a/tiki/index.html
+++ b/tiki/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/main.css">
+
 
 
     <title>tiki.vn</title>
@@ -441,6 +442,8 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="swiper-button-next"></div>
+                            <div class="swiper-button-prev"></div>
                         </div>
                         <!--  <div class="btn_next">
                             <i class="fa-solid fa-angle-right"></i>
@@ -448,8 +451,7 @@
                         <div class="btn_prev">
                             <i class="fa-solid fa-angle-left"></i>
                         </div> -->
-                        <div class="swiper-button-next"></div>
-                        <div class="swiper-button-prev"></div>
+
                     </div>
                 </div>
             </div>
@@ -631,41 +633,43 @@
     <section class="slide_after_brand_auth">
         <div class="grid wide">
             <div class="row">
-                <div class="col l-12 container_slide_after_brand_auth_main ">
-                    <div class="container_slide_after_brand_auth">
-                        <div class="slide_after_brand_auth_item">
-                            <img src="image/Trademark/Discount/1.png" alt="">
-                            <span>Mua một tặng một</span>
+                <div class="col l-12 ">
+                    <div class="container_slide_after_brand_auth_main">
+                        <div class="container_slide_after_brand_auth">
+                            <div class="slide_after_brand_auth_item">
+                                <img src="image/Trademark/Discount/1.png" alt="">
+                                <span>Mua một tặng một</span>
+                            </div>
+                            <div class="slide_after_brand_auth_item">
+                                <img src="image/Trademark/Discount/2.png" alt="">
+                                <span>Coupon 65k</span>
+                            </div>
+                            <div class="slide_after_brand_auth_item">
+                                <img src="image/Trademark/Discount/3.png" alt="">
+                                <span>Quà tặng đơn 99k</span>
+                            </div>
+                            <div class="slide_after_brand_auth_item">
+                                <img src="image/Trademark/Discount/4.png" alt="">
+                                <span>Coupon 1tr</span>
+                            </div>
+                            <div class="slide_after_brand_auth_item">
+                                <img src="image/Trademark/Discount/5.png" alt="">
+                                <span>mua 3 giảm 30%</span>
+                            </div>
+                            <div class="slide_after_brand_auth_item">
+                                <img src="image/Trademark/Discount/6.png" alt="">
+                                <span>coupon 600k</span>
+                            </div>
+                            <div class="slide_after_brand_auth_item">
+                                <img src="image/Trademark/Discount/7.png" alt="">
+                                <span>Ưu đãi đến 50%</span>
+                            </div>
                         </div>
-                        <div class="slide_after_brand_auth_item">
-                            <img src="image/Trademark/Discount/2.png" alt="">
-                            <span>Coupon 65k</span>
-                        </div>
-                        <div class="slide_after_brand_auth_item">
-                            <img src="image/Trademark/Discount/3.png" alt="">
-                            <span>Quà tặng đơn 99k</span>
-                        </div>
-                        <div class="slide_after_brand_auth_item">
-                            <img src="image/Trademark/Discount/4.png" alt="">
-                            <span>Coupon 1tr</span>
-                        </div>
-                        <div class="slide_after_brand_auth_item">
-                            <img src="image/Trademark/Discount/5.png" alt="">
-                            <span>mua 3 giảm 30%</span>
-                        </div>
-                        <div class="slide_after_brand_auth_item">
-                            <img src="image/Trademark/Discount/6.png" alt="">
-                            <span>coupon 600k</span>
-                        </div>
-                        <div class="slide_after_brand_auth_item">
-                            <img src="image/Trademark/Discount/7.png" alt="">
-                            <span>Ưu đãi đến 50%</span>
-                        </div>
+                        <div class="icon_prav icon_prav_slide_auth"><i class="fa-solid fa-angle-left"></i></div>
+                        <div class="icon_next icon_next_slide_auth"><i class="fa-solid fa-angle-right"></i></div>
                     </div>
-                    <div class="icon_prav"><i class="fa-solid fa-angle-left"></i></div>
-                    <div class="icon_next"><i class="fa-solid fa-angle-right"></i></div>
                 </div>
-               <!--  <div class="container_slide_after_brand_auth">
+                <!--  <div class="container_slide_after_brand_auth">
                     <div class="col l-2 slide_after_brand_auth_item">
                         <img src="image/Trademark/Discount/1.png" alt="">
                         <span>Mua một tặng một</span>
