TK:update code fix section

--- a/tiki/index.html
+++ b/tiki/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="container-header">
             <div class="grid wide">
                 <div class="row">
@@ -76,7 +76,89 @@
                 </div>
             </div>
         </div>
-    </header>
+    </header> -->
+    <div class="header">
+        <div class="grid wide container">
+          <div class="row header__container">
+            <div class="col l-1 logo__container">
+              <div class="logo-tiki">
+                <img class="logo-img" src="./image/logo-tiki.png" alt="" />
+              </div>
+              <a href="#">
+                <img
+                  class="freeship-img"
+                  src="./image/logo-freeship.png"
+                  alt=""
+                />
+              </a>
+              <div class="mobile__cart">
+                <i class="far fa-bell"></i>
+                <i class="fas fa-shopping-cart"></i>
+              </div>
+            </div>
+            <div class="col l-8">
+              <div class="search-box">
+                <div class="search__container">
+                  <div class="input-box">
+                    <div class="search-img">
+                      <i class="fas fa-search"></i>
+                    </div>
+                    <input
+                      class="box"
+                      type="text"
+                      placeholder="Tìm sản phẩm, danh mục hay thương hiệu mong muốn..."
+                    />
+                  </div>
+                  <div class="search-btn">
+                    <button class="btn" type="submit">
+                      <i class="fa-solid fa-magnifying-glass search-icon"></i>
+                      Tìm Kiếm
+                    </button>
+                  </div>
+                </div>
+                <div class="food-bar">
+                  <a class="food" href="#"> trái cây </a>
+                  <a class="food" href="#"> thịt,trứng </a>
+                  <a class="food" href="#"> rau củ quả </a>
+                  <a class="food" href="#"> sữa,bơ,phô mai </a>
+                  <a class="food" href="#"> hải sản </a>
+                  <a class="food" href="#"> gạo,mì ăn liền </a>
+                  <a class="food" href="#"> đồ uống,bia rượu </a>
+                  <a class="food" href="#"> bánh kẹo </a>
+                </div>
+              </div>
+            </div>
+            <div class="col l-2">
+              <div class="login">
+                <div class="user-icon">
+                  <i class="fa-regular fa-user"></i>
+                </div>
+                <span class="users">
+                  <span class="log-in">Đăng Nhập / Đăng Ký</span>
+                  <span class="user"
+                    >Tài khoản <i class="fa-solid fa-caret-down"></i
+                  ></span>
+                </span>
+              </div>
+            </div>
+            <div class="col l-1">
+              <div class="carts">
+                <i class="fa-solid fa-cart-shopping cart-icon"></i>
+                <span class="cart">Giỏ Hàng</span>
+                <span class="carts__item">0</span>
+              </div>
+            </div>
+            <div class="col l-2 seller">
+              <a href="#" class="sell">
+                <i class="fa-solid fa-store store-icon"></i>
+                Bán hàng cùng Tiki
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    
     <div class="navigation">
         <div class="grid wide">
             <div class="row">
@@ -634,6 +716,8 @@
 
                 </div>
             </div>
+
+          
     </section>
     <!-------------start section slide after brand auth-------------->
     <section class="slide_after_brand_auth">
