--- a/tiki/index.html
+++ b/tiki/index.html
@@ -80,7 +80,7 @@
     <div class="header">
         <div class="grid wide container">
             <div class="row header__container">
-                <div class="col l-1 logo__container">
+                <div class="col l-1 m-1 c-0 logo__container">
                     <div class="logo-tiki">
                         <img class="logo-img" src="./image/logo-tiki.png" alt="" />
                     </div>
@@ -92,7 +92,7 @@
                         <i class="fas fa-shopping-cart"></i>
                     </div>
                 </div>
-                <div class="col l-8">
+                <div class="col l-8 m-10 c-12">
                     <div class="search-box">
                         <div class="search__container">
                             <div class="input-box">
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col l-2">
+                <div class="col l-2 m-0 c-0">
                     <div class="login">
                         <div class="user-icon">
                             <i class="fa-regular fa-user"></i>
@@ -132,20 +132,38 @@
                         </span>
                     </div>
                 </div>
-                <div class="col l-1">
+                <div class="col l-1 m-0 c-0">
                     <div class="carts">
                         <i class="fa-solid fa-cart-shopping cart-icon"></i>
                         <span class="cart">Giỏ Hàng</span>
                         <span class="carts__item">0</span>
                     </div>
                 </div>
-                <div class="col l-2 seller">
+                <div class="col l-2 m-0 c-0 seller">
                     <a href="#" class="sell">
                         <i class="fa-solid fa-store store-icon"></i>
                         Bán hàng cùng Tiki
                     </a>
                 </div>
+                <!-- <div class="bell_home"><i class="fa-solid fa-bell"></i></div>
+                <div class="cart_home_top"><i class="fa-solid fa-cart-shopping"></i></div>
+                <div class="img_freeShip_top"><img src="image/logo-freeship.png" alt=""></div> -->
             </div>
+        </div>
+        <div class="grid wide">
+            <div class="row">
+        <div class="header_mobile_container">
+            <div class="header_mobile_container_top">
+                <div class="header_mobile_logo img_freeShip_top"><img src="image/logo-freeship.png" alt=""></div> 
+                <div class=" header_mobile_logo img_logo_top"><img src="image/logo-tiki.png" alt=""></div>   
+                <div class="bell_home"><i class="fa-solid fa-bell"></i></div>
+                <div class="cart_home_top"><i class="fa-solid fa-cart-shopping"></i></div>
+            </div>
+            <div class="header_mobile_container_bottom">
+                <input type="text" placeholder="Bạn tìm gì hôm nay ?">
+            </div>
+        </div>
+        </div>
         </div>
     </div>
 
@@ -349,7 +367,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -365,7 +383,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -381,7 +399,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -397,7 +415,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -413,7 +431,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -429,7 +447,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -445,7 +463,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -461,7 +479,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -477,7 +495,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -493,7 +511,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -509,7 +527,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
@@ -525,7 +543,7 @@
                             </div>
 
                             <div class="price">
-                                <span class="priceItem">120.000 đ</span>
+                                <span class="priceItem">120.000 ₫</span>
                                 <span class="percent_discount">65%</span>
                             </div>
                             <div class="deal_discount">
