TK: update header responsive

--- a/tiki/index.html
+++ b/tiki/index.html
@@ -156,9 +156,12 @@
             <div class="header_mobile_container_top">
                 <div class="header_mobile_logo img_freeShip_top"><img src="image/logo-freeship.png" alt=""></div> 
                 <div class=" header_mobile_logo img_logo_top"><img src="image/logo-tiki.png" alt=""></div>   
-                <div class="bell_home"><i class="fa-solid fa-bell"></i></div>
+                <div class="icon_mobile_logo_top">
+                    <div class="bell_home"><i class="fa-solid fa-bell"></i></div>
                 <div class="cart_home_top"><i class="fa-solid fa-cart-shopping"></i></div>
-            </div>
+            
+                </div>
+                </div>
             <div class="header_mobile_container_bottom">
                 <input type="text" placeholder="Bạn tìm gì hôm nay ?">
             </div>
