--- a/tiki/detail.html
+++ b/tiki/detail.html
@@ -122,7 +122,7 @@
             <div class="row">
                 <div class="breadcrumb_container">
                     <div class="breadcrumb_main">
-                        <a class="breadcrumb_item" href="#"><span>Trang chủ</span></a>
+                        <a class="breadcrumb_item" href="index.html" target="_blank"><span>Trang chủ</span></a>
                         <span class="icon icon-next"><i class="fa-solid fa-angle-right"></i></span>
                         <a class="breadcrumb_item" href="#"><span>Điện gia dụng</span></a>
                         <span class="icon icon-next"><i class="fa-solid fa-angle-right"></i></span>
